# PH13FEI_ws_husky_ws

./: husky-simple.txt
src/flir_rgb_spinnaker/cfg/: debug_console.sublime-workspace
src/flir_rgb_spinnaker/launch/: acquisition_multi_external_trigger.launch  publish_rectifications.launch  single.launch
src/flir_rgb_spinnaker/launch/arxiv/: acquisition-multi.launch  acquisition_single.launch
src/flir_rgb_spinnaker/params/: multi_external_trigger_params.yaml  multi_external_trigger_params_example.yaml  single_params.yaml
src/flir_rgb_spinnaker/params/arxiv/: multi-cam_example.yaml  multi_external_trigger_params.orig.yaml  single_params-FILL these with Kalibr values or multi_ext_params.yaml  stereo_camera_example.yaml
src/flir_rgb_spinnaker/src/: camera.cpp  capture.cpp
src/husky_isa4_init/: CMakeLists.txt  package.xml
src/husky_isa4_init/launch/: ais_sensors.launch  tf_pub.launch  tf_pub_trav.launch
src/husky_isa4_init/src/: tf2_kams_cam1R.cpp  tf2_lidar_cam.cpp  tf2_static_lidar.cpp  tf2_traversable_lidar.cpp
src/lidar_ouster/ouster_driv/: OUSTER SENSOR v2.1.2
src/lidar_ouster/ouster_driv/ouster-ros/launch/: ouster.launch  sensor130.launch  sensor130_internal.launch
src/lidar_ouster/ouster_driv/ouster-ros/metadata/: met.json
src/lidar_ouster/pointcloud_to_laserscan/launch/arxiv/: bk_ORIG_lidar_pointcloud_to_laserscan.launch
src/lidar_ouster/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
src/lidar_ouster/test_compare_timestamps/: CMakeLists.txt  package.xml
src/lidar_ouster/test_compare_timestamps/src/: compareTIMESTAMPS.py  helloMsgPubSub.py
